Screen does not update while scrolling or zooming with touchpad on a laptop #40717

Closed
opened 2014-06-20 00:59:00 +02:00 by Bunkerbewohner · 13 comments
Bunkerbewohner commented 2014-06-20 00:59:00 +02:00 (Migrated from localhost:3001)

System Information
Windows 8 x64, Nvidia GeForce GT 750M
(Dell Inspiron 15 7000)

Blender Version
Broken: 2.70a

Short description of error
When zooming or scrolling in any window or 3D view using two-finger gestures on the touchpad, the screen is not redrawn until the fingers have been lifted again (i.e. the gesture has ended).

Exact steps for others to reproduce the error

  1. Use default scene (Ctrl+N)
  2. In the 3D view, use two fingers on a multi-touch enabled touchpad and move them up or down (to zoom the view) without lifting the fingers from the touchpad
  3. behold nothing (view is not updated accordingly)
  4. lift up fingers to end the gesture and behold the screen updating
**System Information** Windows 8 x64, Nvidia GeForce GT 750M (Dell Inspiron 15 7000) **Blender Version** Broken: 2.70a **Short description of error** When zooming or scrolling in any window or 3D view using two-finger gestures on the touchpad, the screen is not redrawn until the fingers have been lifted again (i.e. the gesture has ended). **Exact steps for others to reproduce the error** 1. Use default scene (Ctrl+N) 2. In the 3D view, use two fingers on a multi-touch enabled touchpad and move them up or down (to zoom the view) without lifting the fingers from the touchpad 3. behold nothing (view is not updated accordingly) 4. lift up fingers to end the gesture and behold the screen updating
Bunkerbewohner commented 2014-06-20 00:59:00 +02:00 (Migrated from localhost:3001)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Bunkerbewohner commented 2014-06-20 00:59:00 +02:00 (Migrated from localhost:3001)
Author

Added subscriber: @Bunkerbewohner

Added subscriber: @Bunkerbewohner
Bunkerbewohner commented 2014-06-20 01:28:28 +02:00 (Migrated from localhost:3001)
Author

Now I just looked over Blender's code for the first time and I'm in no position to suggest anything, but I'm going to do it anyway. :D

I played around a bit with the code and figured maybe /blender/windowmanager/intern/wm_event_system:396 missing MOUSEZOOM might be the problem. But I'm gonna let the pros handle this.

Now I just looked over Blender's code for the first time and I'm in no position to suggest anything, but I'm going to do it anyway. :D I played around a bit with the code and figured maybe /blender/windowmanager/intern/wm_event_system:396 missing MOUSEZOOM might be the problem. But I'm gonna let the pros handle this.

Added subscriber: @mont29

Added subscriber: @mont29

I can’t confirm this at all on Linux, so I would rather think of GHOST as potential source of the issue (since code in source/blender/windowmanager is (nearly) OS-agnostic…

I can’t confirm this at all on Linux, so I would rather think of GHOST as potential source of the issue (since code in `source/blender/windowmanager ` is (nearly) OS-agnostic…
Bunkerbewohner commented 2014-06-20 11:47:15 +02:00 (Migrated from localhost:3001)
Author

Thanks, that very well may be the case. I literally looked at the code for the first time yesterday so I wouldn't know.
I'm definitely going to check GHOST.

Thanks, that very well may be the case. I literally looked at the code for the first time yesterday so I wouldn't know. I'm definitely going to check GHOST.

Added subscribers: @ideasman42, @Sergey

Added subscribers: @ideasman42, @Sergey

This seems to be rather a driver issue. This patch works around the issue, but i'm not 100% happy with it: http://www.pasteall.org/53411/diff

The issue is: windowproc receivesthe WM_MOUSEWHEEL message and pushes the even to the queue, however PeekMessages returns 0 for some reason. Smells like driver is doing something funky here.

@ideasman42, any ideas here?

This seems to be rather a driver issue. This patch works around the issue, but i'm not 100% happy with it: http://www.pasteall.org/53411/diff The issue is: windowproc receivesthe WM_MOUSEWHEEL message and pushes the even to the queue, however PeekMessages returns 0 for some reason. Smells like driver is doing something funky here. @ideasman42, any ideas here?

@Sergey,
Did you check on other API's use of this? Checked on QT's code and it may be bigger can of worms :S, they have a PEEKMESSAGE_IS_BROKEN define, though their workaround is for WM_MOUSEMOVE, not touchpad.

see:
0137f092af:src/plugins/platforms/windows/qwindowsmousehandler.cpp#L63-71

Further I cant offer any insights, checked over code, hack is annoying - but if its working well... I wouldn't know a better way.

@Sergey, Did you check on other API's use of this? Checked on QT's code and it may be bigger can of worms :S, they have a `PEEKMESSAGE_IS_BROKEN` define, though their workaround is for `WM_MOUSEMOVE`, not touchpad. see: https://qt.gitorious.org/qt/qtbase/source/0137f092af12110c427f05358f7b207ea95ea341:src/plugins/platforms/windows/qwindowsmousehandler.cpp#L63-71 Further I cant offer any insights, checked over code, hack is annoying - but if its working well... I wouldn't know a better way.

@ideasman42, yes spent quite a while on looking into other implementations and so. I didn't see other implementation which was triggering events handlong based on what PeekMessage() receives, they all tagging stuff for the update from the window proc.

I've got a patch which i think have less entropy of possible sideeffects: http://www.pasteall.org/53429/diff

@ideasman42, yes spent quite a while on looking into other implementations and so. I didn't see other implementation which was triggering events handlong based on what `PeekMessage()` receives, they all tagging stuff for the update from the window proc. I've got a patch which i think have less entropy of possible sideeffects: http://www.pasteall.org/53429/diff
Author

This issue was referenced by 2eebe611e4

This issue was referenced by 2eebe611e42c149aeafcf5bcd18c7a477c813e38

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 2eebe611e4.

Closed by commit 2eebe611e4.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40717
No description provided.